# QFluent

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: auto-format.yml
gallery/: CMakeLists.txt
playground/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
